# yolo_kotlin_ncnn

./: Readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/yolo_kotlin_ncnn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov11.param
app/src/main/cpp/: Android.mk  CMakeLists.txt  glslang_stub.cpp  glslang_stub.h  native-lib.cpp
app/src/main/java/com/example/yolo_kotlin_ncnn/: BoundingBoxOverlay.kt  ImageUtils.kt  MainActivity.kt  NcnnDetector.kt  VulkanStatusChecker.kt
app/src/main/java/com/example/yolo_kotlin_ncnn/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/yolo_kotlin_ncnn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
